--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,10 +1,8 @@
 name: Github Pages Deployment
 
 on:
+  workflow_dispatch:
   push:
-    branches:
-      - master
-  pull_request:
     branches:
       - master
 
