--- a/package.json
+++ b/package.json
@@ -11,30 +11,24 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@hookform/resolvers": "5.2.2",
     "@radix-ui/react-dialog": "1.1.15",
     "@radix-ui/react-label": "2.1.7",
     "@radix-ui/react-separator": "1.1.7",
     "@radix-ui/react-slot": "1.2.3",
     "@radix-ui/react-tooltip": "1.2.8",
     "@tailwindcss/vite": "4.1.14",
-    "@tanstack/query-async-storage-persister": "5.90.13",
-    "@tanstack/query-sync-storage-persister": "5.90.13",
+    "@tanstack/query-async-storage-persister": "5.90.14",
     "@tanstack/react-query": "5.90.3",
-    "@tanstack/react-query-persist-client": "5.90.13",
-    "axios": "1.12.2",
+    "@tanstack/react-query-persist-client": "5.90.14",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "eslint-plugin-import": "2.32.0",
     "firebase": "12.6.0",
-    "localforage": "1.10.0",
     "lucide-react": "0.545.0",
     "react": "19.1.1",
     "react-dom": "19.1.1",
-    "react-hook-form": "7.66.0",
     "tailwind-merge": "3.3.1",
-    "tailwindcss": "4.1.14",
-    "zod": "4.1.12"
+    "tailwindcss": "4.1.14"
   },
   "devDependencies": {
     "@eslint/compat": "1.4.1",
