--- a/package.json
+++ b/package.json
@@ -16,23 +16,21 @@
     "@radix-ui/react-separator": "1.1.7",
     "@radix-ui/react-slot": "1.2.3",
     "@radix-ui/react-tooltip": "1.2.8",
-    "@tailwindcss/vite": "4.1.14",
     "@tanstack/query-async-storage-persister": "5.90.14",
     "@tanstack/react-query": "5.90.3",
     "@tanstack/react-query-persist-client": "5.90.14",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
-    "eslint-plugin-import": "2.32.0",
     "firebase": "12.6.0",
     "lucide-react": "0.545.0",
     "react": "19.1.1",
     "react-dom": "19.1.1",
-    "tailwind-merge": "3.3.1",
-    "tailwindcss": "4.1.14"
+    "tailwind-merge": "3.3.1"
   },
   "devDependencies": {
     "@eslint/compat": "1.4.1",
     "@eslint/js": "9.36.0",
+    "@tailwindcss/vite": "4.1.14",
     "@tanstack/eslint-plugin-query": "5.91.2",
     "@types/node": "24.7.0",
     "@types/react": "19.1.13",
@@ -42,14 +40,17 @@
     "@vitejs/plugin-react": "5.0.3",
     "eslint": "9.36.0",
     "eslint-import-resolver-typescript": "4.4.4",
+    "eslint-plugin-import": "2.32.0",
     "eslint-plugin-react": "7.37.5",
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-react-refresh": "0.4.20",
     "globals": "16.4.0",
+    "tailwindcss": "4.1.14",
     "tw-animate-css": "1.4.0",
     "typescript": "5.8.3",
     "typescript-eslint": "8.45.0",
     "vite": "7.1.7",
+    "vite-plugin-compression": "0.5.1",
     "vitest": "4.0.14"
   },
   "packageManager": "yarn@4.9.2"
