--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,6 +18,10 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
       
+    outputs:
+      page_url: ${{ steps.deployment.outputs.page_url }}
+    deployment-job: disabled
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
