--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@eslint/js": "9.36.0",
     "@tailwindcss/vite": "4.1.14",
     "@tanstack/eslint-plugin-query": "5.91.2",
+    "@types/eslint-plugin-jsx-a11y": "6",
     "@types/node": "24.7.0",
     "@types/react": "19.1.13",
     "@types/react-dom": "19.1.9",
@@ -41,6 +42,7 @@
     "eslint": "9.36.0",
     "eslint-import-resolver-typescript": "4.4.4",
     "eslint-plugin-import": "2.32.0",
+    "eslint-plugin-jsx-a11y": "6.10.2",
     "eslint-plugin-react": "7.37.5",
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-react-refresh": "0.4.20",
